[gd_scene load_steps=4 format=3 uid="uid://dpp7twwn18v8c"]

[ext_resource type="Script" uid="uid://8hrbp025aumj" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="Script" uid="uid://jboeky2h8hew" path="res://compute/compute.gd" id="1_ig7tw"]
[ext_resource type="Texture2D" uid="uid://bgpsfp7du2lqr" path="res://icon.svg" id="3_h2yge"]

[node name="Main" type="CenterContainer"]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0xm2m")

[node name="Compute" type="Node" parent="."]
script = ExtResource("1_ig7tw")
input_exp = 6
output_exp = 3
instance_count = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Input" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Input"]
layout_mode = 2
text = "Input"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Input"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 2
texture = ExtResource("3_h2yge")

[node name="RandomizeButton" type="Button" parent="HBoxContainer/Input"]
layout_mode = 2
text = "Randomize"

[node name="x" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "X"

[node name="Weight" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Weight"]
layout_mode = 2
text = "Weight"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Weight"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 2
texture = ExtResource("3_h2yge")

[node name="RandomizeButton" type="Button" parent="HBoxContainer/Weight"]
layout_mode = 2
text = "Randomize"

[node name="+" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "+"

[node name="Bias" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Bias"]
layout_mode = 2
text = "Bias"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Bias"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 2
texture = ExtResource("3_h2yge")

[node name="RandomizeButton" type="Button" parent="HBoxContainer/Bias"]
layout_mode = 2
text = "Randomize"

[node name="=" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "="

[node name="Output" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Output"]
layout_mode = 2
text = "Output"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Output"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 2
texture = ExtResource("3_h2yge")

[connection signal="pressed" from="HBoxContainer/Input/RandomizeButton" to="." method="_on_randomize_input_pressed"]
[connection signal="pressed" from="HBoxContainer/Weight/RandomizeButton" to="." method="_on_randomize_weight_pressed"]
[connection signal="pressed" from="HBoxContainer/Bias/RandomizeButton" to="." method="_on_randomize_bias_pressed"]
